messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
    version: blue    # Change to green to switch traffic
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
